edits of section 7.10

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3145,6 +3145,7 @@ sense the diagrams need to be consistent, and check this by suitable tools.
 
 
 \ssclause{The ATM Example}
+\label{sec:atm-example}
 
 We present as a small example in model-deriven development using UML,
 taken from \cite{knapp-mossakowski-roggenbach:corr:2014}.  It involves
@@ -3286,10 +3287,11 @@ the thus abstracted \uml{atm}.
 \section{Use Case Model-3: Coherent Semantics for Multi-Language Models}
 \label{model-3}
 	
-Often a single problem area within a given domain must be described using several formalisms, due to user community requirements, expressiveness, tool support 
-and usage, and so forth. A challenge is that typically the different formalizations are written by different people using different logics, and, thus, their overall 
-consistency is hard to maintain.
-The need for the use of multiple ontology languages, even within the OMG community, is also reflected by the OMG Ontology Definition Metamodel (ODM), which 
+Often a single problem area within a given domain must be represented using several formalisms, e.g., because of user community requirements, expressiveness or tool support 
+and usage. 
+Typically the different representations are written by different people using formalisms that are based on different logics. Thus, it is a challenge to maintain 
+consistency across the different representations. 
+The need for the use of multiple OMS languages, even within the OMG community, is also reflected by the OMG Ontology Definition Metamodel (ODM), which 
 provides a number of syntactic transformations between such languages.
 One example is the OMG Date-Time Vocabulary (DTV). DTV has been formulated in different languages, each of which addresses different audiences:
 \begin{itemize}
@@ -3308,7 +3310,7 @@ With DOL, one can, e.g.,
 Note that the last point does not specify what information is lost in the approximation. Indeed, DOL provides the means to specify requirements on the approximation, e.g., that it maximally preserves the information. 
 
 Coming to a DOL example,
-a model like the ATM model developed above typically is part of an
+a model like the ATM model developed in section \ref{sec:atm-example} typically is part of an
 application context that also contains some common terminology.
 This terminology often is specified by an ontology, and then
 it is desirable to relate the model to the ontology. Consider
@@ -3342,7 +3344,7 @@ we need to take care of various aspects:
 \end{itemize}
 
 \begin{lstlisting}[basicstyle=\ttfamily\small,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,DisjointWith, OMS, Characteristics,Transitive,Asymmetric,translation,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,sort,ops,in,approximate,extract,oms,model},escapechar=@,mathescape]
-model xmiClassModel = <https://ontohub.org/ATM/class.xmi>
+model xmiStateModel = <https://ontohub.org/ATM/state.xmi>
 
 model clStateModel = xmiStateModel with
                      translation UMLState2CL
