--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1639,7 +1639,7 @@ For the purposes of this document, the following terms and definitions apply.
 \end{definitions}
 
 
-\sclause{Basic OMS}
+\sclause{Native OMS, Basic OMS}
 
 \begin{definitions}
 
@@ -1658,20 +1658,42 @@ For the purposes of this document, the following terms and definitions apply.
 
 
 \begin{definitions}
-\termdefinitionLight{basic OMS\index{basic OMS}\synonym flat OMS}{\termref{signature} equipped with a set of sentences\index{sentence} and annotations\index{annotation}, which may be used as a building block for a larger \termref{OMS}.}
+\termdefinition{native OMS}{An OMS that is written in exactly one OMS language.}
+  \begin{example}
+    An UML class diagram, an ontology written in OWL 2 EL, and  a specification written in CASLE are three different native OMS. 
+  \end{example}
   \begin{note}
-    The sentences must use only those non-logical symbols that are present in the signature.
+   From the perspective of DOL, native OMS are the basic building blocks for larger OMS. 
   \end{note}
+
+
 
 
 \termdefinition{OMS language}{language equipped with a formal, declarative, logic-based semantics,
 plus non-logical annotations\index{annotation}.}
-  \begin{note}
-  An OMS language is used for the formal specification of \termref{OMS}.
-  \end{note}
   \begin{example}
     OMS languages include OWL 2 DL, Common Logic, F-logic, UML class diagrams, RDFS, and OBO.
   \end{example}
+  \begin{note}
+  An OMS language is used for the formal specification of \termref{OMS}.
+  \end{note}
+  \begin{note}
+  We distinguish between the {logical language aspect}, the {structuring language aspect}, and the {annotation language aspect} of an OMS language. 
+  \end{note}
+
+
+
+\begin{definitions}
+\termdefinitionLight{basic OMS\index{basic OMS}\synonym flat OMS}{An OMS that does not utilize any elements from the structuring language aspects of its languages.}
+  \begin{note}
+    Basic OMS are self-contained in the sense that it semantics does not depend on some other OMS.  In particular, the OMS does not involve any importations.
+  \end{note}
+  \begin{note}
+    Since a basic OMS has no structuring elements, it consists just of a \termref{signature} equipped with a set of sentences\index{sentence} and annotations\index{annotation}.
+  \end{note}
+
+
+
 
 
   \termdefinitionLight{\termref{non-logical symbol}\synonym OMS symbol\index{OMS symbol|see {OMS symbol}
