Added definitions for interoperability and integration to Section 4.10

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2430,27 +2430,12 @@ alignments, etc.}\\
 AENOR commented on the latter: ``The definition of this term needs some revision and more precision 
 in the document as for the real criteria that shall be applied to evaluate the degree of 
 interoperability between OMS.''}\\
-~\todonote[author=Christoph Lange]{Frank Farance cited the following from ISO/IEC 2381-1 Information Technology Vocabulary -- Part 1: Fundamental Terms:\textLF
-01.01.47\textLF
-interoperability\textLF
-The capability to communicate, execute programs, or transfer data among various functional units in 
-a manner that requires the user to have little or no knowledge of the unique characteristics of 
-those units.\textLF
-01.01.40\textLF
-functional unit\textLF
-An entity of hardware or software, or both, capable of accomplishing a specified purpose.\textLF
-... and the following from the FDIS 20944-1 Information technology -- Metadata Registries 
-Interoperability and Bindings (MDR-IB)-- Part 1: Framework, common vocabulary, and common 
-provisions for conformance\textLF
-3.21.12.4\textLF
-data interoperability\textLF
-interoperability concerning the creation, meaning, computation, use, transfer, and exchange of data\textLF
-3.21.12.5\textLF
-metadata interoperability\textLF
-interoperability concerning the creation, meaning, computation, use, transfer, and exchange of descriptive data}
 
 \begin{definitions}
-  \termdefinition{logically interoperable}{property of \termref{structured OMS}, which may be written in different OMS languages\index{OMS language} \markupcomment[author=Christoph Lange,type=todo]{based on different logics\index{logic}}{phrase this more precisely, based on the previously introduced terms}, of being usable jointly in a coherent way (via suitable {OMS language translations}\termref{OMS language translation}), such that the notions of their overall consistency and logical entailment have a precise logical semantics}
+
+\termdefinition{OMS integration} {the union of OMS which preserves the satisfaction and entailment relations among constituent OMS.}
+
+  \termdefinition{logically interoperable}{property of \termref{structured OMS}, which may be written in different OMS languages\index{OMS language} \markupcomment[author=Christoph Lange,type=todo]{based on different logics\index{logic}}{phrase this more precisely, based on the previously introduced terms}, of being usable jointly in a coherent way (via suitable OMS language translations), such that the notions of their overall consistency and logical entailment have a precise logical semantics.}
 \end{definitions}
 \begin{note}
 Within ISO 19763 and ISO 20943, metamodel interoperability is
@@ -2461,9 +2446,19 @@ models that semantically represent this overlap. Within these
 standards, a model is a representation of some aspect of a domain of
 interest using a normative modelling facility and modelling
 constructs.
+
+The notion of logical interoperability is distinct from the notion of 
+interoperability used in 
+ISO/IEC 2381-1 Information Technology Vocabulary -- Part 1: Fundamental Terms,
+which is restricted to
+the capability to communicate, execute programs, or transfer data among 
+various hardware or software entities 
+in a manner that requires the user to have little or no knowledge of the 
+unique characteristics of those entities.
 \end{note}
 
-
+\termdefinition{OMS interoperability} {relation among OMS (via OMS alignments)
+which are logically interoperable.}
 
 \chapter{Symbols}
 
