--- a/Standard/dol.bib
+++ b/Standard/dol.bib
@@ -1,12 +1,12 @@
-
 @ARTICLE{GoguenBurstall92,
-AUTHOR = "J. A. Goguen and R. M. Burstall",
-TITLE = "Institutions: Abstract Model Theory for Specification and
-Programming",
-JOURNAL = "Journal of the Association for Computing Machinery",
-VOLUME = 39,
-PAGES = {95--146},
-YEAR = 1992}
+  AUTHOR = {Joseph A. Goguen and Rod M. Burstall},
+  TITLE = {Institutions: Abstract Model Theory for Specification and Programming},
+  JOURNAL = {J. ACM},
+  VOLUME = {39},
+  PAGES = {95-146},
+  YEAR = 1992,
+}
+
 @article{OWL2,
   author = {W3C},
   title = {OWL 2 Web Ontology Language},
@@ -114,7 +114,7 @@ YEAR = 1992}
   journal = {W3C Working Group Note, 28 August 2008.  \url{http://www.w3.org/TR/2008/NOTE-swbp-vocab-pub-20080828/}},
   year = 2008,
 }
-@article{rfc2616,
+@article{rfc2616notused,
   author = {IETF NETWORK WORKING GROUP},
   title = {Hypertext Transfer Protocol -- {HTTP/1.1}},
   journal = {RFC 2616, 1999},
@@ -192,12 +192,6 @@ ZimmerEuze06,
   title = {A Study in the Foundations of Programming Methodology: Specifications, Institutions, Charters and Parchments},
   journal = {In: Category Theory and Computer Programming, D. Pitt et al. (eds.), pp. 313--333, no.\ 240 in LNCS, Springer, 1985.},
   year = 1985,
-}
-@article{Institutions,
-  author = {J. A. Goguen and R.M. Burstall},
-  title = {Institutions: Abstract Model Theory for Specification and Programming},
-  journal = {Journal of the Association for Computing Machinery 39, pp. 95--146, , 1992},
-  year = 1992,
 }
 
 @InProceedings{weakcol,
