Updated reference: Institutions -> GoguenBurstall92

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4912,7 +4912,7 @@ signatures, and linked coherently by signature morphisms.
 
 
 \begin{definition}\label{def:inst} An
-\defsty{institution} \cite{Institutions} is a quadruple $I=(\Sign,\sen,\IMod,{\models})$
+\defsty{institution} \cite{GoguenBurstall92} is a quadruple $I=(\Sign,\sen,\IMod,{\models})$
 consisting of the following:
 %
 \begin{itemize}
