Updated figures for ATM example.

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3175,23 +3175,28 @@ bank). After three unsuccessful trials the card is kept.
 \begin{figure}[!Ht]
 \centering
 \subfigure[Interaction\label{fig:interaction}]{%
-  \includegraphics[trim=6 6 6 6,clip,scale=0.65]{illustrations/uml/scenario.png}%\\[-1.5ex]
+\includegraphics[scale=.5]{illustrations/uml/sd-atm2bank.pdf}
+%  \includegraphics[trim=6 6 6 6,clip,scale=0.65]{illustrations/uml/scenario.png}%\\[-1.5ex]
 }
 \hspace*{0.5cm}
 \subfigure[Composite structure\label{fig:system}]{%
-  \includegraphics[trim=6 6 6 6,clip,scale=0.65]{illustrations/uml/system.png}%\\[-1.5ex]
+\includegraphics[scale=.5]{illustrations/uml/cmp-system.pdf}
+%  \includegraphics[trim=6 6 6 6,clip,scale=0.65]{illustrations/uml/system.png}%\\[-1.5ex]
 }
 \\
 \subfigure[Protocol state machine\label{fig:psm}]{%
-  \includegraphics[trim=6 6 6 6,clip,scale=.65]{illustrations/uml/protocol.png}%\\[-1.5ex]
+\includegraphics[scale=.5]{illustrations/uml/stm-atm2bank-protocol.pdf}
+%  \includegraphics[trim=6 6 6 6,clip,scale=.65]{illustrations/uml/protocol.png}%\\[-1.5ex]
 }
 \hspace*{0.4cm}
-\subfigure[Interface\label{fig:class}]{%
-  \includegraphics[trim=6 6 6 6,clip,scale=0.65]{illustrations/uml/interfaceWithOCL.png}%\\[-1.5ex]
+\subfigure[Interfaces and components\label{fig:class}]{%
+\includegraphics[scale=.5]{illustrations/uml/pkg-components.pdf}
+%  \includegraphics[trim=6 6 6 6,clip,scale=0.65]{illustrations/uml/interfaceWithOCL.png}%\\[-1.5ex]
 }
 \\
 \subfigure[State machine\label{fig:state-machine}]{%
-  \includegraphics[trim=6 6 6 6,clip,scale=0.65]{illustrations/uml/atm-behaviour.png}%\\[-1.5ex]
+\includegraphics[scale=.5]{illustrations/uml/stm-atm-behaviour.pdf}
+%  \includegraphics[trim=6 6 6 6,clip,scale=0.65]{illustrations/uml/atm-behaviour.png}%\\[-1.5ex]
 }
 \vspace*{-1.5ex}
 \caption{ATM example}\label{fig:atm-example}
