remove the backreference for basic OMS in 6.5.2(d) in table 0.1 (cleaning effort to distinguish basic moms from native oms)

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -891,9 +891,8 @@ The metalanguage shall provide syntactic constructs for (i) structuring OMS rega
 logic in which their sentences are formalized and (ii) basic and structured OMS and facilities to
 identify them in a globally unique way.
 	&
-For basic OMS, see 6.5.2(c) above.
 The structuring constructs for OMS in \ref{c:focused-OMS} and \ref{a:dol-text:OMS} can be used for 
-any logic, see the semantics in \ref{c:direct-sematics}. DOL uses IRIs for referencing OMS, see
+any logic, see the semantics in \ref{c:direct-sematics}. DOL uses IRIs for referencing both basic and structured OMS, see
 \ref{c:iris}.
    \\ \hline
 %
