a start  to resolve the native vs basic mess

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1499,9 +1499,9 @@ example, fragment URIs in the style of \nisref{IETF/RFC 5147} for identifying te
 Independently from the conformance levels given above, there is the following hierarchy of conformance \wrt CURIEs (compact URIs) as a means of abbreviating IRIs, listed from highest to lowest:
 \begin{description}
 \item[Prefixed CURIE conformance] The given serialization allows non-logical symbol identifiers to have the syntactic form of a CURIE, or any subset of the CURIE grammar that allows named prefixes (\syntax{prefix:reference}).  The serialization is \notrequired to support CURIEs with no prefix.\\
-  Informative comment: In the case that CURIEs are used, a prefix map with multiple prefixes \may be used to map the non-logical symbol identifiers of a basic OMS to IRIs in multiple namespaces (\cf \cref{c:map-ids})
+  Informative comment: In the case that CURIEs are used, a prefix map with multiple prefixes \may be used to map the non-logical symbol identifiers of a native OMS to IRIs in multiple namespaces (\cf \cref{c:map-ids})
 \item[Non-prefixed names only] The given serialization only supports CURIEs with no prefix, or any subset of the grammar of the \syntax{REFERENCE} nonterminal in the CURIE grammar.\\
-  Informative comment: In this case, a binding for the empty prefix \hasto be declared, as this is the only possibility of mapping the identifiers of the basic OMS to IRIs, which are located in one flat namespace.
+  Informative comment: In this case, a binding for the empty prefix \hasto be declared, as this is the only possibility of mapping the identifiers of the native OMS to IRIs, which are located in one flat namespace.
 \end{description}
 
 CURIEs that have a prefix may not be acceptable identifiers in every
@@ -3539,22 +3539,21 @@ language', but a meta-language that is used on top of existing OMS languages.
 The major functions of \DOL are the following: 
 \begin{itemize}
 		\item \DOL allows the use of OMS in other OMS languages (e.g., UML class diagrams, \CASL, 
-		OWL, Common Logic) without requiring any changes. These are called \emph{basic OMS}.  
-		\item \DOL provides for defining new, more complex  OMS based on existing OMS. These OMS are
-		called \emph{structured OMS}. \DOL provides a number of operations for this purpose; e.g.,
+		OWL, Common Logic) without requiring any changes. These are called \emph{native OMS}.  
+		\item \DOL provides for defining new, \emph{structured OMS} based on existing OMS. \ednote{note that this may be read as implying that no native OMS are structured} \DOL provides a number of operations for this purpose; e.g.,
 		it is possible to define a structured OMS $C$ as the union of an OWL
 		ontology $A$ and a Common Logic ontology $B$.
 		\item \DOL provides for defining connections between two OMS by using 
 		\emph{OMS mappings}. \DOL provides a variety of mappings; e.g.,  one can align terminology 
 		between different OMS or specify that some OMS is an extension of another. A set of OMS
 		and OMS mappings may form together an \emph{OMS network}.
-		\item Basic OMS inherit their semantics from the underlying OMS languages. Structured OMS, 
+		\item Native OMS inherit their semantics from the underlying OMS languages. The \DOL
+		 operations for defining structured OMS, 
 		OMS mappings, and OMS networks have a declarative model-theoretic semantics, which is 
 		 defined in \cref{c:semantics}.  
 \end{itemize}
  
-The syntax of \DOL roughly follows these functions; basic OMS, structured OMS, OMS
-mappings, and OMS networks are the most important syntactic categories of \DOL. 
+The syntax of \DOL roughly follows these functions; native OMS, the various kind of structured OMS, OMS mappings, and OMS networks are the most important syntactic categories of \DOL. 
 They (together with queries and importation) form the items in a \emph{DOL library}.
  
 
